# cycling

./: .gitignore  README.md  pyproject.toml
src/cycling/: __init__.py  cli.py  html_to_excel.py  logging.py
src/cycling/web/: __init__.py  asset_versioning.py  main.py  templating.py
src/cycling/web/static/css/: style.css
src/cycling/web/static/js/: main.js
src/cycling/web/templates/: base.html  index.html
tests/: test_html_to_excel.py  test_web.py
tests/fixtures/html_results/: Rennen 01 - 4.12 Jugend männlich U17.html  Rennen 01 - 4.13 Jugend weiblich U17.html  Rennen 01 - 4.24 Masters 2, 3 u. 4.html  Rennen 01 - 4.24 Masters 2.html  Rennen 01 - 4.24 Masters 3.html  Rennen 01 - 4.24 Masters 4.html  Rennen 02 - 4.14 Schüler U15.html  Rennen 02 - 4.5 Amateure.html  Rennen 03 - 4.15 Schülerinnen U15.html  Rennen 03 - 4.16 Schüler U13.html  Rennen 03 - 4.17 Schülerinnen U13.html  Rennen 03 - 4.24 Masters 2, 3 u. 4.html  Rennen 03 - 4.24 Masters 2.html  Rennen 03 - 4.24 Masters 3.html  Rennen 03 - 4.24 Masters 4.html  Rennen 04 - 4.10 Junioren U19.html  Rennen 04 - 4.11 Juniorinnen U19.html  Rennen 04 - 4.18 Schüler U11.html  Rennen 04 - 4.19 Schülerinnen U11.html  Rennen 04 - 4.3 CT und Elite-Amateur.html  Rennen 04 - 4.9 Elite (WTW, PRW, CTW) und Elite Frauen.html  Rennen 06 - 4.11 Juniorinnen U19.html  Rennen 06 - 4.9 Elite (WTW, PRW, CTW) und Elite Frauen.html  Rennen 07 - 4.10 Junioren U19.html  Rennen 07 - 4.3 CT und Elite-Amateur.html  Rennen 07 - 4.5 Amateure.html
tools/: anonymize_results.py
